syntax = "proto3";

option csharp_namespace = "Morphic.InstallerService";

import "google/protobuf/timestamp.proto";

package MorphicInstallerServer;

message Response {
	oneof response {
		LogMessage log = 1;
		ProgressMessage progress = 2;
	}
}

message LogMessage {
	string logMessage = 1;
}

message ProgressMessage {
	double percentage = 1;
}

message ActionMessage {
	oneof action {
		InstallRequest install = 1;
		UninstallRequest uninstall = 2;
	}
}

message InstallRequest {
	string application = 1;
	repeated string arguments = 2;
}

message UninstallRequest {
	string application = 1;
	repeated string arguments = 2;
}

service MorphicInstaller {
	rpc StartSession(stream ActionMessage) returns (stream Response);
}